; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/sound/shared/extr_time.c_SleepMs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/sound/shared/extr_time.c_SleepMs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@KernelMode = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SleepMs(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 %5, i32* %6, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = mul nsw i32 %8, -10000
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* @KernelMode, align 4
  %11 = load i32, i32* @FALSE, align 4
  %12 = call i32 @KeDelayExecutionThread(i32 %10, i32 %11, %struct.TYPE_3__* %4)
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @KeDelayExecutionThread(i32, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
